--- a/atacseeker/scripts/atacseeker.Rmd
+++ b/atacseeker/scripts/atacseeker.Rmd
@@ -471,13 +471,13 @@ A raw text file, `diffAccRegions.tsv`, with all differentially accessible region
 |right       | gene feature to the right of the region |
 |score       | negative log of the significance p-value |
 
-The annotation is performed using the `detailRanges` function of `csaw`. The function identifies all overlapping genic features for each region and reports them in a string form. The features are reported as `SYMBOL|EXONS|STRAND` where 
-- `SYMBOL` represents the gene symbol
-- `EXON` lists the overlapping exons (`0` for promoters, `I` for introns)
-- `STRAND` reports the strand  
+The annotation is performed using the `detailRanges` function of `csaw`. The function identifies all overlapping genic features for each region and reports them in a string form. The features are reported as `SYMBOL|EXONS|STRAND` where  
+
+* `SYMBOL` represents the gene symbol
+* `EXON` lists the overlapping exons (`0` for promoters, `I` for introns)
+* `STRAND` reports the strand  
 
 Features in flanking regions of the region of interest are also reported. These features are formatted with the same scheme as above except with an extra `[DISTANCE]` field, which represents the distance between the feature and the region of interest. Only those flanking features which are within 5kbp of each region are considered.
-
 
 ```{r mem_clean_up_one, echo=FALSE, message=FALSE, warning=FALSE}
 rm(list=setdiff(ls(),
